[package]
name = "piscem_atac"
version = "0.1.0"
edition = "2021"
authors = [
  "Noor Pratap Singh <noorpratap@gmail.com>",
  "Rob Patro <rob@cs.umd.edu>"
]

include = [
  "/src/*.rs",
  "/Cargo.toml"
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
clap = { version = "=4.5.2", features = ["derive", "wrap_help", "cargo", "help", "usage", "string", "error-context"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", default-features = true, features = ["env-filter"] }
libradicl = { git = "https://github.com/COMBINE-lab/libradicl", branch = "develop"}
ahash = "0.8.3"
bstr = "1.5.0"
bincode = "1.3.3"
itertools = "0.11.0"
serde = { version = "1.0.164", features = ["derive"] }
serde_json = "1.0.99"
slog = "2.7.0"
slog-term = "2.9.0"
slog-async = "2.7.0"
typed-builder = "0.14.0"
num-format = "0.4.4"
num_cpus = "1.16.0"
bio-types = { version = "1.0.0", default-features = true, features = ["serde"] }
chrono = "0.4.26"
needletail = "0.5.1"
csv = "1.3.0"
thiserror = "1.0.57"
flate2 = "1.0.28"
indexmap = "2.2.5"
noodles = { version = "0.65.0", features = ["bam", "bgzf", "sam"] }
noodles-util = { version = "0.37.0", features = ["alignment"] }